--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.2",
     "@ckeditor/ckeditor5-editor-balloon": "^25.0.0",
     "@ckeditor/ckeditor5-essentials": "^25.0.0",
+    "@ckeditor/ckeditor5-inspector": "^2.2.2",
     "@ckeditor/ckeditor5-link": "^25.0.0",
     "@ckeditor/ckeditor5-paragraph": "^25.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^25.0.0",
